@@ -1,3 +1,8 @@
+2010-06-28  Martin Jambor  <mjambor@suse.cz>
+
+	PR c++/44535
+	* g++.dg/torture/pr44535.C: New test.
+
 2010-06-28  Michael Matz  <matz@suse.de>
 
 	PR middle-end/44592
